@startuml domain_model
skinparam shadowing false
skinparam classAttributeIconSize 0

package "User Aggregate" <<Rectangle>> {

    class User <<entity, aggregate root>> {
        name
        phoneNumber
        position
        status
        skillsAssessmentDate
    }

    class Email <<value object>> {
        address
    }

    class SecurityClearance <<value object>> {
        level
        expirationDate
    }

    Enum RoleType {
        ADMIN
        BACKOFFICE_OPERATOR
        ATCC
        PILOT
        FLIGHT_CONTROL_OPERATOR
        WEATHER_PERSON
    }
}

User "1" *-- "1" Email : "identified by"
User "1" *-- "1" SecurityClearance : "holds"
User "1" --> "1..*" RoleType : "has"

@enduml